added padding for contact us button and also add fotorama image gallery for index main page with customizations - added thumbs and autoplay

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,3 +26,16 @@ body {
     border-radius: 50%;
     margin-top: 10%;
 }
+
+.btn {
+    padding: 10px;
+}
+
+.gallery {
+    margin-top: 75px;
+    margin-bottom: 50px;
+}
+
+.fotorama__wrap {
+    margin: 0 auto;
+}
