--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
 
 .bio-panel {
     background-color: whitesmoke;
-    border: 1px solid lightgrey;
+    /*border: 1px solid lightgrey;*/
     height: 100%;
     text-align: center;
     padding-bottom: 20px;
@@ -22,7 +22,7 @@ body {
 .img {
     max-width: 70%;
     max-height: auto;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     border-radius: 50%;
     margin-top: 10%;
 }
